# myclir

./: Cargo.toml  README.md
docker/: Dockerfile  docker-compose.yml
src/: app.rs  completion.rs  handler.rs  lib.rs  main.rs  query.rs  ui.rs
