[package]
name = "myclir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = "0.26.1"
itertools = "0.11.0"
lazy_static = "1.4.0"
diesel = { version = "*", features = ["mysql"] }
rand = "0.8.5"
ratatui = "0.24.0"
ratatui-textarea = "0.4.0"
tiberius = "0.12.2"
