[package]
name = "myclir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
itertools = "0.11.0"
lazy_static = "1.4.0"
dotenv = "0.15.0"
rand = "0.8.5"
ratatui = "0.25.0"
ratatui-textarea = "0.4.0"
tiberius = "0.12.2"
tokio = { version = "1.35.1", features = ["full"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "mysql", "macros", "bigdecimal", "rust_decimal", "time"] }
